--- a/routes/_components/compose/ComposeButton.html
+++ b/routes/_components/compose/ComposeButton.html
@@ -1,7 +1,7 @@
 <div class="compose-box-button-halo frosted-glass">
   <button class="primary compose-box-button"
           :disabled
-          aria-label="{{sticky ? 'Compose' : 'Toot!'}}"
+          aria-label="{{sticky ? 'Compose' : 'がおー!'}}"
           on:click>
     <span class="{{$postingStatus || sticky ? 'hidden' : ''}}">
       Toot!
