--- a/routes/_components/compose/ComposeButton.html
+++ b/routes/_components/compose/ComposeButton.html
@@ -4,7 +4,7 @@
           aria-label="{{sticky ? 'Compose' : 'がおー!'}}"
           on:click>
     <span class="{{$postingStatus || sticky ? 'hidden' : ''}}">
-      Toot!
+      がおー!
     </span>
     <div class="compose-box-button-spinner"
          aria-hidden="true">
