--- a/routes/_components/status/StatusHeader.html
+++ b/routes/_components/status/StatusHeader.html
@@ -7,7 +7,7 @@
   </svg>
   <span class="status-header-span">
     {{#if timelineType === 'pinned'}}
-      Pinned toot
+      固定されたがおー
     {{else}}
       <a href="/accounts/{{accountId}}"
          class="status-header-a"
